fix link to this heading visibility on focus
Fixes the issue when tabbing through the documentation and you focus heading anchor the icon is not visible.

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -76,7 +76,8 @@ pre {
     visibility: hidden;
   }
 
-  &:hover .material-icons {
+  &:hover .material-icons,
+  &:focus .material-icons {
     visibility: visible;
   }
 }
